implement custom hook to query a pokemon

--- a/pokedexApp/src/components/pokemonBadgeType/pokemonTypeBadge.module.scss
+++ b/pokedexApp/src/components/pokemonBadgeType/pokemonTypeBadge.module.scss
@@ -1,3 +1,6 @@
+@import '../../css/variables/colors.scss';
+@import '../../css/variables/fontSizes.scss';
+
 .badge {
 	display: flex;
 	align-items: center;
@@ -6,14 +9,13 @@
 	border-radius: 0.5rem;
 	flex-shrink: 0;
 
-	font-family: 'Montserrat';
-	font-size: 1rem;
+	font-size: $size-xs;
 	line-height: 150%;
-	font-weight: 400;
+	font-weight: $text;
 	text-transform: capitalize;
-	color: #eeee;
-
-	border: 1px solid #eeee;
+	color: $white;
+	border: 1px solid $white;
+  text-shadow: 2px 2px 4px $black;
 
 	img {
 		width: 1rem;
