--- a/pokedexApp/src/components/home/home.module.scss
+++ b/pokedexApp/src/components/home/home.module.scss
@@ -1,6 +1,17 @@
+@import '../../css/variables/colors.scss';
+@import '../../css/variables/fontSizes.scss';
+
 .home {
 	display: flex;
 	justify-content: center;
+
+	.card__title {
+		text-align: center;
+		color: $white;
+		font-size: $size-lg;
+		font-weight: $text-bold;
+		text-shadow: 2px 2px 4px $black;
+	}
 }
 
 .home__card {
@@ -10,26 +21,55 @@
 	justify-content: space-around;
 	align-items: center;
 
+	.card__pokemon {
+		padding: 1rem;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		gap: 1rem;
 
-}
+		.pokemon__number {
+			color: $white;
+			font-size: $size-md;
+			font-weight: $text-bold;
+			text-shadow: 2px 2px 4px $black;
+		}
 
-.card__badge {
-	display: flex;
-	flex-direction: row;
-	gap: 0.5rem;
-}
+		.pokemon__name {
+			color: $white;
+			font-size: $size-lg;
+			font-weight: $text;
+			text-transform: capitalize;
+			text-shadow: 2px 2px 4px $black;
+		}
 
-.card__pokemon {
-	padding: 1rem;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
-	gap: 1rem;
+		.card__badge {
+			display: flex;
+			flex-direction: row;
+			gap: 0.5rem;
+		}
 
-}
+		.pokemon__characteristics {
+			display: flex;
+			flex-direction: row;
+			align-items: center;
+			gap: 3rem;
+			color: $white;
+			font-size: $size-sm;
+			font-weight: $text;
+			text-shadow: 2px 2px 4px $black;
 
-.pokemon_name {
-  text-transform: capitalize;
+			.characteristic {
+				display: flex;
+				flex-direction: column;
+				align-items: center;
+
+				.value {
+					font-weight: $text-bold;
+				}
+			}
+		}
+	}
 }
 
 .card__image {
@@ -37,26 +77,13 @@
 	height: 50%;
 }
 
-.pokemon__characteristics {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  gap: 3rem;
-
-  .characteristic {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-}
-
 @media screen and (min-width: 600px) {
 	.home__card {
 		flex-direction: row;
-	}
 
-	.card__pokemonName {
-		width: 70%;
+		.card__pokemonName {
+			width: 70%;
+		}
 	}
 
 	.card__image {
