--- a/pokedexApp/src/css/variables/fontSizes.scss
+++ b/pokedexApp/src/css/variables/fontSizes.scss
@@ -1,6 +1,7 @@
+$size-xs: 15px;
 $size-sm: 18px;
 $size-md: 24px;
 $size-lg: 30px;
 
-$text-bold: 700px;
-$text: 400px;
+$text-bold: 700;
+$text: 400;
