Pokemon's list implemented

--- a/pokedexApp/src/css/variables/colors.scss
+++ b/pokedexApp/src/css/variables/colors.scss
@@ -1,6 +1,6 @@
 $light-blue: #37aee2;
-$blue: #1E96C8;
-$dark-blue: #17759C;
+$blue: #1e96c8;
+$dark-blue: #17759c;
 
 $light-green: #37e278;
 $green: #1ec857;
@@ -8,4 +8,7 @@ $dark-green: #179c4a;
 
 $white: #eeeeee;
 
-$black: #161616
+$black: #161616;
+$light-black: #282c34;
+
+$gray: #656565
