--- a/pokedexApp/src/components/generalComponents/button/Button.module.scss
+++ b/pokedexApp/src/components/generalComponents/button/Button.module.scss
@@ -1,11 +1,11 @@
-@import '../../css/variables/colors.scss';
-@import '../../css/variables/fontSizes.scss';
+@import '../../../css/variables/colors.scss';
+@import '../../../css/variables/fontSizes.scss';
 
 .primary {
 	background-image: linear-gradient(-180deg, $light-blue 0%, $blue 100%);
 	border-radius: 0.5rem;
 	box-sizing: border-box;
-	color: #ffffff;
+	color: $white;
 	display: flex;
 	justify-content: center;
 	text-decoration: none;
@@ -38,6 +38,28 @@
 	&:focus {
 		background-image: linear-gradient(-180deg, $green 0%, $dark-green 100%);
 		border: 2px solid $light-green;
+	}
+}
+
+.badge {
+	background-image: linear-gradient(-180deg, $light-green 0%, $green 100%);
+	border-radius: 0.5rem;
+	box-sizing: border-box;
+	color: $white;
+	display: flex;
+	justify-content: center;
+	text-decoration: none;
+	border: 0;
+	cursor: pointer;
+	padding: 0.7rem 2rem;
+
+  display: flex;
+  align-items: center;
+  gap: 5px;
+
+	&:hover,
+	&:focus {
+		background-image: linear-gradient(-180deg, $green 0%, $dark-green 100%);
 	}
 }
 
