--- a/pokedexApp/src/components/generalComponents/card/card.module.scss
+++ b/pokedexApp/src/components/generalComponents/card/card.module.scss
@@ -6,13 +6,27 @@
 }
 
 .sm {
-	width: 20%;
+	width: 50%;
 }
 
 .md {
-	width: 40%;
+	width: 70%;
 }
 
 .lg {
 	width: 80%;
+}
+
+@media screen and (min-width: 600px) {
+	.sm {
+		width: 20%;
+	}
+
+	.md {
+		width: 30%;
+	}
+
+	.lg {
+		width: 80%;
+	}
 }
