--- a/pokedexApp/src/components/pokemonList/pokemon.module.scss
+++ b/pokedexApp/src/components/pokemonList/pokemon.module.scss
@@ -1,32 +1,20 @@
 @import '../../css/variables/colors.scss';
 @import '../../css/variables/fontSizes.scss';
 
-.home {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-
-	.card__title {
-		text-align: center;
-		color: $white;
-		font-size: $size-lg;
-		font-weight: $text-bold;
-		text-shadow: 2px 2px 4px $black;
-	}
-}
-
-.home__card {
-	margin: 1rem;
+.pokemon__card {
+	padding: 1rem;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
 	align-items: center;
+  border-radius: 10px;
+	// background-image: radial-gradient(rgb(28, 216, 14), green);
 
 	&__pokemon {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		gap: 1rem;
+		gap: .3rem;
 
 		.pokemon__number {
 			color: $white;
@@ -69,26 +57,5 @@
 				}
 			}
 		}
-	}
-}
-
-.card__image {
-	width: 50%;
-	height: 50%;
-}
-
-@media screen and (min-width: 600px) {
-	.home__card {
-		flex-direction: row;
-    margin: 2rem;
-
-		.card__pokemonName {
-			width: 70%;
-		}
-	}
-
-	.card__image {
-		width: 30%;
-		height: 30%;
 	}
 }
