--- a/pokedexApp/src/components/button/button.module.scss
+++ b/pokedexApp/src/components/button/button.module.scss
@@ -1,5 +1,5 @@
-@import '../../../css/variables/colors.scss';
-@import '../../../css/variables/fontSizes.scss';
+@import '../../css/variables/colors.scss';
+@import '../../css/variables/fontSizes.scss';
 
 .primary {
 	background-image: linear-gradient(-180deg, $light-blue 0%, $blue 100%);
