--- a/pokedexApp/src/components/layout/footer/Footer.module.scss
+++ b/pokedexApp/src/components/layout/footer/Footer.module.scss
@@ -1,5 +1,7 @@
+@import '../../../css/variables/colors.scss';
+
 .footer {
-	color: #eeeeee;
+	color: $white;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
