--- a/pokedexApp/src/components/SearchBar/searchBar.module.scss
+++ b/pokedexApp/src/components/SearchBar/searchBar.module.scss
@@ -2,16 +2,16 @@
 @import '../../css/variables/fontSizes.scss';
 
 .searchBar {
-	display: grid;
-	grid-template-columns: auto 1fr;
-	margin: 3rem 5rem;
-	align-items: end;
-	gap: 50%;
+	display: flex;
+	justify-content: center;
+	width: 100%;
+	margin: 2rem 0px;
 
 	&__searchByType {
 		display: flex;
 		flex-direction: column;
 		align-items: center;
+		width: 80%;
 
 		&__title {
 			color: $white;
@@ -24,9 +24,9 @@
 			display: flex;
 			flex-direction: row;
 			gap: 8px;
-			max-width: 23rem;
+			width: 100%;
 			overflow-x: scroll;
-			padding: .5rem;
+			padding: 0.5rem;
 		}
 	}
 }
