--- a/pokedexApp/src/components/SearchBar/searchBar.module.scss
+++ b/pokedexApp/src/components/SearchBar/searchBar.module.scss
@@ -5,7 +5,7 @@
 	display: flex;
 	flex-direction: column;
 	margin: 2rem 3rem;
-  gap: 2rem;
+	gap: 2rem;
 
 	&__searchByType {
 		display: flex;
@@ -26,6 +26,20 @@
 			width: 100%;
 			overflow-x: scroll;
 		}
+
+		&__pokemonTypes::-webkit-scrollbar {
+			width: 1em;
+		}
+
+		&__pokemonTypes::-webkit-scrollbar-track {
+			box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+		}
+
+		&__pokemonTypes::-webkit-scrollbar-thumb {
+			background-color: darkgrey;
+			outline: 1px solid slategrey;
+			border-radius: 10px;
+		}
 	}
 
 	&__searchByName {
@@ -42,10 +56,9 @@
 	}
 }
 
-
 /* On screens that are 992px or less, set the background color to blue */
 @media screen and (min-width: 992px) {
-  .searchBar {
-    margin: 2rem 7rem;
-  }
+	.searchBar {
+		margin: 2rem 7rem;
+	}
 }
