implement react hook form

--- a/pokedexApp/src/containers/mainPage/home/home.module.scss
+++ b/pokedexApp/src/containers/mainPage/home/home.module.scss
@@ -1,5 +1,5 @@
-@import '../../css/variables/colors.scss';
-@import '../../css/variables/fontSizes.scss';
+@import '../../../css/variables/colors.scss';
+@import '../../../css/variables/fontSizes.scss';
 
 .home {
   display: flex;
