--- a/pokedexApp/src/components/input/input.module.scss
+++ b/pokedexApp/src/components/input/input.module.scss
@@ -1,10 +1,12 @@
 @import '../../css/variables/fontSizes.scss';
 
+
+
 .container {
 	display: flex;
 	flex-direction: row;
-  align-items: center;
-  gap: 5px;
+	align-items: center;
+	gap: 5px;
 
 	.label {
 		font-size: $size-sm;
@@ -26,6 +28,11 @@
 		border-radius: 50%;
 		animation: spinner 1.5s linear infinite;
 	}
+}
+
+.labelInput{
+  display: grid;
+	grid-template-columns: 1fr 3fr;
 }
 
 /* On screens that are 992px or less, set the background color to blue */
