user account implemented

--- a/pokedexApp/src/components/input/input.module.scss
+++ b/pokedexApp/src/components/input/input.module.scss
@@ -37,9 +37,9 @@
 
 /* On screens that are 992px or less, set the background color to blue */
 @media screen and (min-width: 992px) {
-	.container {
-		width: 30%;
-	}
+	// .container {
+	// 	width: 30%;
+	// }
 }
 
 @keyframes spinner {
