--- a/pokedexApp/src/components/SearchBar/searchBar.module.scss
+++ b/pokedexApp/src/components/SearchBar/searchBar.module.scss
@@ -25,6 +25,7 @@
 			gap: 8px;
 			width: 100%;
 			overflow-x: scroll;
+      list-style-type: none;
 		}
 
 		&__pokemonTypes::-webkit-scrollbar {
