--- a/pokedexApp/src/components/pokemonModal/pokemonModal.module.scss
+++ b/pokedexApp/src/components/pokemonModal/pokemonModal.module.scss
@@ -5,7 +5,6 @@
   box-shadow: 0 8px 20px rgba(0 0 0 / 0.1);
   border-radius: 6px;
   background: rgba(0 0 0 / 0.5);
-  // border: 1px solid var(--spectrum-global-color-gray-300);
   outline: none;
   padding: 10px;
   width: 100%;
@@ -133,6 +132,7 @@
     margin-bottom: 20px;
     font-weight: $text-bold;
     font-size: $size-sm;
+    gap: 15px;
   }
 }
 
@@ -173,7 +173,6 @@
   .pokemonModal {
     width: 70%;
     height: 30%;
-    background-color: red;
 
     &__dialog {
       &__container {
