--- a/pokedexApp/src/components/pokemonDetailsModal/pokemonDetailsModal.module.scss
+++ b/pokedexApp/src/components/pokemonDetailsModal/pokemonDetailsModal.module.scss
@@ -139,7 +139,7 @@
 @media screen and (min-width: 700px) {
   .pokemonModal {
     width: 70%;
-    height: 60%; // use all screen possible for mobile mode
+    height: 60%;
 
     &__dialog {
       &__container {
