--- a/pokedexApp/src/components/Loading/loadingSpinner.module.scss
+++ b/pokedexApp/src/components/Loading/loadingSpinner.module.scss
@@ -1,3 +1,5 @@
+@import '../../css/variables/colors.scss';
+
 @keyframes spinner {
 	0% {
 		transform: rotate(0deg);
@@ -20,8 +22,8 @@
 		&__spinner {
 			width: 50px;
 			height: 50px;
-			border: 10px solid #f3f3f3; /* Light grey */
-			border-top: 10px solid #383636; /* Black */
+			border: 10px solid $light-gray;
+			border-top: 10px solid $light-black;
 			border-radius: 50%;
 			animation: spinner 1.5s linear infinite;
 			top: 50%;
