--- a/pokedexApp/src/components/layout/footer/Footer.module.scss
+++ b/pokedexApp/src/components/layout/footer/Footer.module.scss
@@ -5,7 +5,8 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	padding: 10px;
+	padding: 10px 0px;
 	height: 10%;
 	text-align: center;
+  width: 100%;
 }
