--- a/pokedexApp/src/components/input/input.module.scss
+++ b/pokedexApp/src/components/input/input.module.scss
@@ -13,10 +13,12 @@
 	}
 
 	input {
-		width: 100%;
-		height: 40px;
-		font-size: 1.7rem;
-		border-radius: 10px;
+    width: 100%;
+    height: 40px;
+    font-size: 1.7rem;
+    border-radius: 10px;
+    border: 0px;
+    padding: 0px
 	}
 
 	&__spinner {
