save cancel change password

--- a/pokedexApp/src/containers/user/user/UserForm/UserForm.module.scss
+++ b/pokedexApp/src/containers/user/user/UserForm/UserForm.module.scss
@@ -6,28 +6,28 @@
 	flex-direction: column;
 	gap: 5px;
 	width: 30%;
+}
 
-	.field {
+.field {
+	display: grid;
+	grid-template-columns: 3fr 0.1fr;
+	align-items: center;
+	width: 100%;
+	gap: 10px;
+	justify-content: space-between;
+
+	&__container {
 		display: grid;
-		grid-template-columns: 3fr 0.1fr;
+		grid-template-columns: 1fr 3fr;
 		align-items: center;
-		width: 100%;
 		gap: 5px;
-		justify-content: space-between;
 
-		.label {
+		&__label {
 			font-size: $size-sm;
 			font-weight: $text;
 		}
 
-		.container {
-			display: grid;
-			grid-template-columns: 1fr 3fr;
-			align-items: center;
-			gap: 5px;
-		}
-
-		.value {
+		&__value {
 			width: 100%;
 			height: 40px;
 			font-size: 1.7rem;
@@ -36,4 +36,25 @@
 			padding: 0px;
 		}
 	}
+}
+
+.passwordContainer {
+	display: flex;
+	flex-direction: column;
+	gap: 5px;
+}
+
+.iconContainer {
+	display: flex;
+	flex-direction: column;
+  gap: 5px
+}
+
+.icon {
+	cursor: pointer;
+}
+
+.iconDisabled {
+	cursor: not-allowed;
+	color: $gray;
 }
